deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: "kanjiup-reco.alexandre-em.fr"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: vultr
  name: kanji-app-ingress
spec:
  rules:
    - host: "kanjiup-reco.alexandre-em.fr"
      http:
        paths:
          - backend:
              service:
                name: recognition-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "kanjiup-reco.alexandre-em.fr"
      secretName: wildcard-tls
